[gd_scene load_steps=7 format=3 uid="uid://b2wno2vvi6ug0"]

[ext_resource type="Texture2D" uid="uid://codnyxm18s3el" path="res://Assets/sprite_sheet_2.png" id="1_0fdjo"]
[ext_resource type="Script" uid="uid://cnu3ovle86hy4" path="res://Bosses/Boss1/boss_1_whacka_mole_hand.gd" id="1_4ymfq"]
[ext_resource type="Texture2D" uid="uid://bukpfuwqn8g1x" path="res://Assets/sprite_sheet_3.png" id="2_y2amw"]
[ext_resource type="PackedScene" uid="uid://r4juqn0fmrji" path="res://mole_repulsor.tscn" id="4_2kukg"]
[ext_resource type="Texture2D" uid="uid://dohbe30b71p8b" path="res://Assets/grad.png" id="5_emmh4"]
[ext_resource type="AudioStream" uid="uid://7l8bwhaegtt4" path="res://Assets/Sfx/explosion.wav" id="6_1wcdb"]

[node name="Boss1_WhackaMoleHand" type="Node2D" node_paths=PackedStringArray("sfx")]
script = ExtResource("1_4ymfq")
sfx = NodePath("AudioStreamPlayer2D")

[node name="idle_sprite" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(0, -160)
texture = ExtResource("1_0fdjo")
flip_h = true
region_enabled = true
region_rect = Rect2(768, 0, 256, 384)

[node name="aiming_sprite" type="Sprite2D" parent="."]
visible = false
z_index = 3
position = Vector2(10, -160)
scale = Vector2(1.22821, 1.23183)
texture = ExtResource("2_y2amw")
flip_h = true
region_enabled = true
region_rect = Rect2(0, 448, 256, 384)

[node name="smash_sprite" type="Sprite2D" parent="."]
visible = false
z_index = 3
position = Vector2(0, -96)
scale = Vector2(1.23251, 1.22173)
texture = ExtResource("2_y2amw")
flip_h = true
region_enabled = true
region_rect = Rect2(256, 448, 256, 384)

[node name="cross_hair" type="Node2D" parent="."]
visible = false

[node name="cross_hair_sprite" type="Sprite2D" parent="cross_hair"]
texture = ExtResource("2_y2amw")
region_enabled = true
region_rect = Rect2(512, 448, 256, 256)

[node name="mole_repulsor" parent="." instance=ExtResource("4_2kukg")]
min_repulsion_strength = 4000
radius = 256
disabled = true

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-1.14441e-05, -96)
scale = Vector2(1.16263, 0.653211)
energy = 0.2
texture = ExtResource("5_emmh4")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_1wcdb")
volume_db = 6.726
